--- a/app/assets/stylesheets/leg.css
+++ b/app/assets/stylesheets/leg.css
@@ -1,32 +1,32 @@
-#left-leg {
+#Left-Leg {
 
   height: 159px;
   width: 117px;
   background-color: red;
   position: absolute;
   top: 486px;
-  left: 515px;
+  left: 579px;
   opacity: 0;
   border-radius: 100px
 }
 
-#left-leg:hover {
+#Left-Leg:hover {
   opacity: .6
 }
 
-#right-leg {
+#Right-Leg {
 
   height: 159px;
   width: 104px;
   background-color: red;
   position: absolute;
   top: 486px;
-  right: 530px;
+  right: 594px;
   opacity: 0;
   border-radius: 100px;
 }
 
-#right-leg:hover {
+#Right-Leg:hover {
   opacity: .6
 }
 
@@ -35,3 +35,90 @@
 
 }
 
+.front-leg-image {
+  position: absolute;
+  top: 0px;
+  right: 630px;
+
+}
+
+#Quad {
+
+  height: 239px;
+  width: 93px;
+  background-color: red;
+  position: absolute;
+  top: 68px;
+  left: 630px;
+  border-radius: 90px;
+  opacity: 0;
+  -webkit-transform: rotate(-7deg);
+}
+
+#Quad:hover {
+  opacity: .6;
+}
+
+#Tibialis {
+height: 193px;
+width: 49px;
+background-color: red;
+position: absolute;
+bottom: 208px;
+left: 673px;
+border-radius: 50px;
+opacity: 0;
+-webkit-transform: rotate(-5deg);
+
+}
+
+#Tibialis:hover {
+  opacity: .6;
+}
+
+#Hamstring {
+
+  height: 300px;
+width: 100px;
+border-radius: 50px;
+background-color: red;
+opacity: 0;
+position: absolute;
+top: 20px;
+left: 669px;
+-webkit-transform: rotate(3deg);
+}
+
+#Calve {
+
+  height: 230px;
+width: 50px;
+border-radius: 50px;
+background-color: red;
+opacity: 0;
+position: absolute;
+bottom: 192px;
+left: 687px;
+-webkit-transform: rotate(1deg);
+}
+
+#Calve:hover {
+  opacity: .6;
+}
+
+#Hamstring:hover {
+  opacity: .6
+}
+
+
+
+#rear-leg-text {
+position: absolute;
+bottom: 43px;
+left: 646px;
+}
+
+#rear-leg-text:hover {
+  cursor: pointer;
+
+}
