--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,16 +1,25 @@
+<h1 id="rear-leg-text"> Rear Leg </h1>
+<h1 id="rear-torso-text"> Back </h1>
+<h1 id="bodypart-text"></h1>
 <h1 id="chest-text"> Chest </h1>
 <!-- <h1 id="shoulder-text"> Shoulder </h1> -->
 <h1 id="abdominals-text"> Abdominals </h1>
 <h1 id="arm-text"> Arm </h1>
 <h1 id="leg-text"> Leg </h1>
+<h1 id="bicep-text"> Bicep </h1>
+<h1 id="tricep-text"> Tricep </h1>
+<h1 id="forearm-text"> Forearm </h1>
+<img class="rear-torso-image" src="http://i62.tinypic.com/ancxl2.png">
 <img class="torso" src="http://i57.tinypic.com/2mozb48.png">
 <img class="arm-image" src="http://i61.tinypic.com/2aktxh.png">
-  <!-- <img class="rear-torso" src="http://i62.tinypic.com/ancxl2.png"> -->
-  <div id="chest-left">
+
+  <img class="rear-leg-image" src="http://i59.tinypic.com/1zq33a8.png">
+ <img class="front-leg-image" src="http://i57.tinypic.com/16c45e0.jpg">
+  <div class="bodypart" id="Left-Chest">
   </div>
 
 
-  <div id="chest-right">
+  <div class="bodypart" id="Right-Chest">
   </div>
 
 
@@ -22,23 +31,53 @@
   <div id="shoulder-right">
   </div> -->
 
-  <div id="abdominals">
+  <div class="bodypart" id="Abdominals">
   </div>
 
-  <div id="right-arm">
+  <div class="bodypart" id="Right-Arm">
   </div>
 
 
-
-  <div id="left-arm">
+  <div class="bodypart" id="Left-Arm">
   </div>
 
-  <div id="left-leg">
+  <div class="bodypart" id="Left-Leg">
   </div>
 
-  <div id="right-leg">
+  <div class="bodypart" id="Right-Leg">
   </div>
 
-  <div id="bicep">
+  <div class="bodypart" id="Bicep">
   </div>
 
+  <div class="bodypart" id="Tricep">
+  </div>
+
+  <div class="bodypart" id="Forearm">
+  </div>
+
+  <div class="bodypart" id="Quad">
+  </div>
+
+  <div class="bodypart" id="Tibialis">
+  </div>
+
+  <div class="bodypart" id="Hamstring">
+  </div>
+
+
+  <div class="bodypart" id="Calve">
+  </div>
+
+  <div class="bodypart" id="Right-Glute">
+  </div>
+
+
+  <div class="bodypart" id="Left-Glute">
+  </div>
+
+ <div class="bodypart" id="Left-Lat">
+  </div>
+
+  <div class="bodypart" id="Right-Lat">
+  </div>
