--- a/app/assets/stylesheets/abdominals.css
+++ b/app/assets/stylesheets/abdominals.css
@@ -1,9 +1,9 @@
-#abdominals {
+#Abdominals {
 height: 250px;
 width: 110px;
 background-color: red;
 position: absolute;
-left: 593px;
+left: 657px;
 top: 240px;
 opacity: 0;
 border-radius: 50px;
@@ -11,7 +11,7 @@ border-radius: 50px;
 }
 
 
-#abdominals:hover {
+#Abdominals:hover {
   opacity: .6
 
 }
