--- a/app/assets/stylesheets/arm.css
+++ b/app/assets/stylesheets/arm.css
@@ -1,34 +1,34 @@
-#right-arm {
+#Right-Arm {
 
   height: 400px;
   width: 60px;
   background-color: red;
   position: absolute;
   top: 110px;
-  left: 780px;
+  left: 842px;
   -webkit-transform: rotate(-8deg);
   opacity: 0;
   border-radius: 50px;
 }
 
-#right-arm:hover {
+#Right-Arm:hover {
   opacity: .6
 }
 
-#left-arm {
+#Left-Arm {
 
   height: 400px;
   width: 60px;
   background-color: red;
   position: absolute;
   top: 99px;
-  left: 455px;
+  left: 515px;
   -webkit-transform: rotate(9deg);
   opacity: 0;
   border-radius: 50px;
 }
 
-#left-arm:hover {
+#Left-Arm:hover {
   opacity: .6
 }
 
@@ -44,7 +44,7 @@
 
 }
 
-#bicep {
+#Bicep {
 height: 120px;
 width: 36px;
 position: absolute;
@@ -56,8 +56,57 @@ opacity: 0;
 
 }
 
-#bicep:hover {
+#Bicep:hover {
 opacity: .6;
 
 }
 
+#bicep-text {
+  position: absolute;
+
+}
+
+
+#Tricep {
+height: 158px;
+width: 33px;
+background-color: red;
+position: absolute;
+left: 680px;
+top: 160px;
+border-radius: 40px;
+opacity: 0;
+
+}
+
+#Tricep:hover {
+opacity: .6;
+
+}
+
+#tricep-text {
+  position: absolute;
+
+}
+
+#Forearm {
+height: 180px;
+width: 60px;
+background-color: red;
+position: absolute;
+top: 290px;
+left: 700px;
+border-radius: 40px;
+opacity: 0;
+
+}
+
+#Forearm:hover {
+opacity: .6;
+
+}
+
+#forearm-text {
+  position: absolute;
+
+}
