--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,12 @@
+
+<div id="banner"></div>
+
 <link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
 
+
 <% if logged_in? %>
-
-  <h1 id="rear-leg-text"> Rear Leg </h1>
-
+<a class="links" id="logout" href="/logout"> Logout</a>
+<a class="links" id="home" href="/"> Home </a>
   <h1 id="bodypart-text"></h1>
   <%= image_tag "reartorso.png", :class => "rear-torso-image" %>
   <%= image_tag "torsoedit2.png", :class => "torso" %>
@@ -15,6 +18,8 @@
  -->
 
 
+  <div id="videoContainer">
+  </div>
 
 
   <!-- Left chest -->
@@ -37,6 +42,9 @@
   </div>
   <!-- Right leg -->
   <div class="bodypart" id="Right-Leg">
+  </div>
+
+  <div class="bodypart" id="Shoulder">
   </div>
   <!-- Bicep -->
   <div class="bodypart" id="Bicep">
@@ -72,18 +80,57 @@
   <div class="bodypart" id="Right-Lat">
   </div>
 
-<h1 id="rear-torso-text"> Back </h1>
-
-
-  <div id="videoContainer">
+  <div class="bodypart" id="Lower Back">
   </div>
-<a href="/logout"> Logout</a>
+
+<h1 class="rear" id="rear-torso-text"> Back </h1>
+<h1 class="rear" id="rear-leg-text"> Rear Leg </h1>
+
+
+
 
 <% else %>
 
-  <%= link_to("Sign up", new_user_path) %>
+  <a class="links" id="signuplink" href="/users/new"> Sign up </a>
 
-  <%= link_to("Login", session_new_path) %>
-
+<% @user.errors.messages.each do |attr, message| %>
+  <p>error on <%= attr %><%= message %></p>
 <% end %>
+
+
+<div id="sign-up-form">
+  <%= form_for(@user) do |f| %>
+    <%= f.label(:name) %>
+      <%= f.text_field(:name) %>
+      <br>
+    <%= f.label(:email) %>
+      <%= f.text_field(:email) %>
+          <br>
+
+    <%= f.label(:password) %>
+      <%= f.password_field(:password) %>
+          <br>
+
+    <%= f.label(:password_confirmation) %>
+      <%= f.password_field(:password_confirmation) %>
+          <br>
+
+    <%= f.submit %>
+  <% end %>
+</div>
+
+  <a class="links" id="login-link" href="/session/new"> Log In </a>
+
+
+<div id="login-form">
+    <%= form_tag("/session", method: "post") do %>
+      <%= label_tag(:email) %>
+      <%= text_field_tag(:email) %>
+      <%= label_tag(:password) %>
+      <%= password_field_tag(:password) %>
+      <%= submit_tag("Login") %>
+      <% end %>
+  <% end %>
+</div>
+
 
