--- a/app/assets/stylesheets/leg.css.erb
+++ b/app/assets/stylesheets/leg.css.erb
@@ -36,7 +36,6 @@
 }
 
 .front-leg-image {
-  display: block;
   height: 890px;
   position: absolute;
   top: -40px;
@@ -115,11 +114,12 @@ left: 687px;
 
 
 #rear-leg-text {
-position: absolute;
-bottom: 43px;
-left: 646px;
-z-index: 1;
+  position: absolute;
+  bottom: 0px;
+  right: 530px;
+  margin: 0 auto;
 }
+
 
 #rear-leg-text:hover {
   cursor: pointer;
