--- a/app/assets/stylesheets/videos.css.erb
+++ b/app/assets/stylesheets/videos.css.erb
@@ -4,9 +4,10 @@
 
 iframe {
   text-align: center;
-  display: inline-block;
+  display: block;
   transition: .5s all;
   margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 iframe:hover {
