--- a/app/assets/stylesheets/arm.css.erb
+++ b/app/assets/stylesheets/arm.css.erb
@@ -37,18 +37,34 @@
 
 .arm-image {
  position: absolute;
-top: -90px;
+top: 40px;
 right: 280px;
 height: 830px;
 
 }
+
+#Shoulder {
+  height: 110px;
+  width: 100px;
+  border-radius: 40px;
+  position: absolute;
+  opacity: 0;
+  background-color: red;
+  left: 680px;
+  top: 180px;
+}
+
+#Shoulder:hover {
+  opacity: .6;
+}
+
 
 #Bicep {
 height: 120px;
 width: 36px;
 position: absolute;
 background-color: red;
-top: 170px;
+top: 300px;
 right: 666px;
 border-radius: 65px;
 opacity: 0;
@@ -68,7 +84,7 @@ width: 33px;
 background-color: red;
 position: absolute;
 left: 680px;
-top: 160px;
+top: 290px;
 border-radius: 40px;
 opacity: 0;
 
@@ -86,7 +102,7 @@ height: 180px;
 width: 60px;
 background-color: red;
 position: absolute;
-top: 290px;
+top: 430px;
 left: 700px;
 border-radius: 40px;
 opacity: 0;
