--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -80,7 +80,13 @@
   <div class="bodypart" id="Right-Lat">
   </div>
 
-  <div class="bodypart" id="Lower Back">
+  <div class="bodypart" id="Trapezius">
+  </div>
+
+  <div class="bodypart" id="Rhomboids">
+  </div>
+
+  <div class="bodypart" id="Lower-Back">
   </div>
 
 <h1 class="rear" id="rear-torso-text"> Back </h1>
