--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -29,6 +29,7 @@ body {
 
 #rear-torso-text {
   cursor: pointer;
+  margin: 0;
 
 }
 
@@ -49,6 +50,7 @@ body {
 }
 
 #bodypart-text {
+  font-family: 'Frijole', cursive;
   color: white;
   z-index: 1;
 }
@@ -96,5 +98,46 @@ body {
 text-align: right;
 position: absolute;
 right: 10px;
+
+}
+
+#footer {
+  height: 96px;
+  width: 1425px;
+  background-color: black;
+  opacity: .3;
+  z-index: -2;
+  position: absolute;
+  bottom: 0px;
+
+}
+
+
+#info {
+  height: 400px;
+  width: 400px;
+  position: absolute;
+  background-color: black;
+  opacity: .6;
+  top: 170px;
+  left: 40px;
+  border: 10px dotted white;
+  border-radius: 10px;
+  padding: 10px;
+
+}
+
+
+#contactinfo {
+  height: 400px;
+  width: 400px;
+  position: absolute;
+  background-color: black;
+  opacity: .6;
+  top: 170px;
+  right: 40px;
+  border: 10px dotted white;
+  border-radius: 10px;
+  padding: 10px;
 
 }
