--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -138,5 +138,21 @@
       <% end %>
   <% end %>
 </div>
+<footer id="footer">
+
+</footer>
+
+<div id="info">
+  <h1 style="color: red; text-align: center; font-family: 'Frijole', cursive;"> What we provide </h1>
+    <p style="color: red; text-align: center; font-family: 'Frijole'"> An innovative and efficient way for the user to learn about exercises </p>
+    <h1 style="color: red; text-align: center; font-family: 'Frijole', cursive;"> How to use?</h1>
+       <p style="color: red; text-align: center; font-family: 'Frijole'"> -Simply hover over the desired body part you wish to work out <br><br> -  Click on that body part<br><br> -Watch and Learn</p>
+</div>
 
 
+<div id="contactinfo">
+    <h1 style="color: red; text-align: center; font-family: 'Frijole', cursive;"> Contact </h1>
+       <p style="color: red; text-align: center; font-family: 'Frijole'"> Email: Isaac.Saqib@stonybrook.edu </p>
+        <p style="color: red; text-align: center; font-family: 'Frijole'"><a style="text-decoration: none; color: red; text-align: center; font-family: 'Frijole'" href="https://www.github.com/isaacsaqib/Workout_App"> Github</a> </p>
+        <p style="color: red; text-align: center; font-family: 'Frijole'"><a style="text-decoration: none; color: red; text-align: center; font-family: 'Frijole'" href="https://www.linkedin.com/pub/isaac-saqib/95/a84/905">LinkedIn</a> </p>
+</div>
