changing chest css for screen res

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -17,6 +17,7 @@
 body {
   background-image: url("http://www.360fitness-studio.com/images/BackgroundSized.png");
   margin: 0px;
+
 }
 
 #logo {
@@ -141,3 +142,12 @@ right: 10px;
   padding: 10px;
 
 }
+
+#torso-container {
+  position: relative;
+}
+
+.torso {
+  /*position: relative;*/
+}
+
