--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
 <a class="links" id="home" href="/"> Home </a>
   <h1 id="bodypart-text"></h1>
   <%= image_tag "reartorso.png", :class => "rear-torso-image" %>
-  <%= image_tag "torsoedit2.png", :class => "torso" %>
+
   <%= image_tag "armedit3.png", :class => "arm-image" %>
   <%= image_tag "rearlegedit.png", :class => "rear-leg-image" %>
   <%= image_tag "legedit_copy.png", :class => "front-leg-image" %>
@@ -33,29 +33,30 @@
 
   <div id="videoContainer">
   </div>
-
-
-  <!-- Left chest -->
-  <div class="bodypart" id="Left-Chest">
-  </div>
-  <!-- Right chest -->
-  <div class="bodypart" id="Right-Chest">
-  </div>
-  <!-- Abs -->
-  <div class="bodypart" id="Abdominals">
-  </div>
-  <!-- Right arm -->
-  <div class="bodypart" id="Right-Arm">
-  </div>
-  <!-- Left arm -->
-  <div class="bodypart" id="Left-Arm">
-  </div>
-  <!-- Left leg -->
-  <div class="bodypart" id="Left-Leg">
-  </div>
-  <!-- Right leg -->
-  <div class="bodypart" id="Right-Leg">
-  </div>
+<div id="torso-container">
+  <%= image_tag "torsoedit2.png", :class => "torso" %>
+    <!-- Left chest -->
+    <div class="bodypart" id="Left-Chest">
+    </div>
+    <!-- Right chest -->
+    <div class="bodypart" id="Right-Chest">
+    </div>
+    <!-- Abs -->
+    <div class="bodypart" id="Abdominals">
+    </div>
+    <!-- Right arm -->
+    <div class="bodypart" id="Right-Arm">
+    </div>
+    <!-- Left arm -->
+    <div class="bodypart" id="Left-Arm">
+    </div>
+    <!-- Left leg -->
+    <div class="bodypart" id="Left-Leg">
+    </div>
+    <!-- Right leg -->
+    <div class="bodypart" id="Right-Leg">
+    </div>
+</div>
 
   <div class="bodypart" id="Shoulder">
   </div>
