--- a/app/assets/stylesheets/chest.css.erb
+++ b/app/assets/stylesheets/chest.css.erb
@@ -19,8 +19,8 @@ img {
   background-color: red;
   opacity: 0;
   position: absolute;
-  top: 177px;
-  left: 611px;
+  top: 17%;
+  /*left: 42.5%;*/
   border-radius: 50px;
 }
 
@@ -38,8 +38,8 @@ img {
   background-color: red;
   opacity: 0;
   position: absolute;
-  top: 174px;
-  right: 617px;
+  top: 17%;
+  /*right: 617px;*/
   border-radius: 50px;
 
 }
