--- a/app/assets/stylesheets/chest.css.erb
+++ b/app/assets/stylesheets/chest.css.erb
@@ -19,7 +19,7 @@ img {
   background-color: red;
   opacity: 0;
   position: absolute;
-  top: 17%;
+  top: 170px;
   /*left: 42.5%;*/
   border-radius: 50px;
 }
@@ -38,7 +38,7 @@ img {
   background-color: red;
   opacity: 0;
   position: absolute;
-  top: 17%;
+  top: 170px;
   /*right: 617px;*/
   border-radius: 50px;
 
