adding resposition for body parts

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -44,9 +44,10 @@ body {
 
 
 .rear-torso-image {
-  position: absolute;
-  top: 100px;
-  right: 470px;
+  display: block;
+  margin: 0 auto;
+  /*top: 100px;*/
+  /*right: 470px;*/
 
 }
 
