--- a/app/assets/stylesheets/arm.css.erb
+++ b/app/assets/stylesheets/arm.css.erb
@@ -5,7 +5,7 @@
   background-color: red;
   position: absolute;
   top: 153px;
-  left: 842px;
+  right: 300px;
   -webkit-transform: rotate(-8deg);
   opacity: 0;
   border-radius: 50px;
@@ -36,11 +36,8 @@
 
 
 .arm-image {
- position: absolute;
-top: 40px;
-right: 280px;
-height: 830px;
-
+display: block;
+margin: 0 auto;
 }
 
 #Shoulder {
