--- a/app/assets/stylesheets/leg.css.erb
+++ b/app/assets/stylesheets/leg.css.erb
@@ -36,10 +36,9 @@
 }
 
 .front-leg-image {
-  height: 890px;
   position: absolute;
-  top: -40px;
-  right: 649px;
+  left: 513px;
+  height: 840px;
 
 }
 
@@ -123,5 +122,11 @@ left: 687px;
 
 #rear-leg-text:hover {
   cursor: pointer;
+
+}
+
+.rear-leg-image {
+  display: block;
+  margin: 0 auto;
 
 }
