--- a/app/assets/stylesheets/leg.css.erb
+++ b/app/assets/stylesheets/leg.css.erb
@@ -36,10 +36,8 @@
 }
 
 .front-leg-image {
-  position: absolute;
-  left: 513px;
-  height: 840px;
-
+  display: block;
+  margin: 0 auto;
 }
 
 #Quad {
@@ -113,9 +111,7 @@ left: 687px;
 
 
 #rear-leg-text {
-  position: absolute;
-  bottom: 0px;
-  right: 530px;
+  display: block;
   margin: 0 auto;
 }
 
