--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,9 @@
 
-<div id="banner"></div>
+<div id="banner">
 
+</div>
+
+<h1 id="logo"> WorkMeOut </h1>
 <link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
 
 
@@ -26,13 +29,20 @@
 
 <div id="contactinfo">
     <h1 style="color: red; text-align: center; font-family: 'Frijole', cursive;"> Contact </h1>
-       <p style="color: red; text-align: center; font-family: 'Frijole'"> Email: Isaac.Saqib@stonybrook.edu </p>
-        <p style="color: red; text-align: center; font-family: 'Frijole'"><a style="text-decoration: none; color: red; text-align: center; font-family: 'Frijole'" href="https://www.github.com/isaacsaqib/Workout_App"> Github</a> </p>
-        <p style="color: red; text-align: center; font-family: 'Frijole'"><a style="text-decoration: none; color: red; text-align: center; font-family: 'Frijole'" href="https://www.linkedin.com/pub/isaac-saqib/95/a84/905">LinkedIn</a> </p>
+        <p style="color: red; text-align: center; font-family: 'Frijole'"> Email: Isaac.Saqib@stonybrook.edu </p>
+        <p style="color: red; text-align: center; font-family: 'Frijole'">
+          <a style="text-decoration: none; color: red; text-align: center; font-family: 'Frijole'" href="https://www.github.com/isaacsaqib/Workout_App"> Github
+          </a>
+        </p>
+        <p style="color: red; text-align: center; font-family: 'Frijole'">
+          <a style="text-decoration: none; color: red; text-align: center; font-family: 'Frijole'" href="https://www.linkedin.com/pub/isaac-saqib/95/a84/905">LinkedIn
+          </a>
+        </p>
 </div>
 
   <div id="videoContainer">
   </div>
+
   <%= image_tag "torsoedit2.png", :class => "torso" %>
     <!-- Left chest -->
     <div class="bodypart" id="Left-Chest">
