--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -30,7 +30,8 @@ body {
 
 #rear-torso-text {
   cursor: pointer;
-  margin: 0;
+  margin: 0 auto;
+  display: block;
 
 }
 
@@ -104,7 +105,7 @@ right: 10px;
 }
 
 #footer {
-  height: 96px;
+  height: 75px;
   width: 1425px;
   background-color: black;
   opacity: .3;
