--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,8 +15,11 @@
  */
 
 body {
-  background-image: url("http://www.360fitness-studio.com/images/BackgroundSized.png");
-  margin: 0px;
+  background-image: url("http://www.360fitness-studio.com/images/BackgroundSized.png") ;
+  /*background-repeat: none;*/
+  /*background-repeat: no-repeat;*/
+  background-size: cover;
+  /*margin: 0px;*/
 
 }
 
