--- a/app/assets/stylesheets/arm.css.erb
+++ b/app/assets/stylesheets/arm.css.erb
@@ -38,6 +38,7 @@
 .arm-image {
 display: block;
 margin: 0 auto;
+height: 680px;
 }
 
 #Shoulder {
@@ -61,7 +62,7 @@ height: 120px;
 width: 36px;
 position: absolute;
 background-color: red;
-top: 300px;
+top: 280px;
 right: 666px;
 border-radius: 65px;
 opacity: 0;
@@ -81,7 +82,7 @@ width: 33px;
 background-color: red;
 position: absolute;
 left: 680px;
-top: 290px;
+top: 240px;
 border-radius: 40px;
 opacity: 0;
 
@@ -99,7 +100,7 @@ height: 180px;
 width: 60px;
 background-color: red;
 position: absolute;
-top: 430px;
+top: 380px;
 left: 700px;
 border-radius: 40px;
 opacity: 0;
