--- a/app/assets/stylesheets/glutes.css
+++ b/app/assets/stylesheets/glutes.css
@@ -4,8 +4,8 @@
   background-color: red;
   opacity: 0;
   position: absolute;
-  bottom: 100px;
-  left: 740px;
+  bottom: 120px;
+  right: 740px;
   border-radius: 50px;
 }
 
@@ -19,7 +19,7 @@
   background-color: red;
   opacity: 0;
   position: absolute;
-  bottom: 100px;
+  bottom: 120px;
   right: 718px;
   border-radius: 50px;
 }
