adding workouts page

--- a/app/assets/javascripts/youtube.js.erb
+++ b/app/assets/javascripts/youtube.js.erb
@@ -26,7 +26,25 @@ function getAndAppendVideoIframes(searchTerm, element) {
     data.data.items.forEach(function(link) {
       var newLink = link.player.default.replace("watch?v=", "embed/").replace("&feature=youtube_gdata_player", "").replace("http:", "");
       var iframe = $("<iframe>").attr("src", newLink).attr("width", 360).attr("height", 215);
+      var button = $("<button>Add to your Workout</button><br>").attr("id", newLink).css("margin", "0 auto").css("display", "block");
       element.append(iframe);
+      element.append(button);
+    });
+
+    $("button").on("click", function(){
+      $.ajax ({
+          url: "/workouts",
+          type: "POST",
+          data: { "video_url": $("button").attr("id")},
+          dataType: "JSON"
+      }).done(function(data){
+        console.log(data);
+
+      });
+
     });
   });
 }
+
+// $("button")[0].parentElement.innerHTML
+
