--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -84,14 +84,19 @@ body {
 
 #sign-up-form {
   color: white;
-  font-size: 20px;
+  font-size: 14px;
   font-family: 'Frijole', cursive;
+  margin-left: 30px;
+  margin-top: 60px;
 }
 
 #login-form {
   color: white;
-  font-size: 20px;
+  font-size: 14px;
   font-family: 'Frijole', cursive;
+  margin-left: 30px;
+  margin-top: 30px ;
+
 }
 
 #logout {
@@ -148,11 +153,15 @@ right: 10px;
 
 }
 
-#torso-container {
-  position: relative;
-}
+#form-container {
+  height: 400px;
+  width: 400px;
+  background-color: black;
+  box-shadow: 10px;
+  margin: 0 auto;
+  margin-top: 100px;
+  display: block;
+  border: 4px solid white;
+  border-radius: 120px;
 
-.torso {
-  /*position: relative;*/
 }
-
