--- a/app/assets/javascripts/youtube.js.erb
+++ b/app/assets/javascripts/youtube.js.erb
@@ -48,3 +48,4 @@ function getAndAppendVideoIframes(searchTerm, element) {
 
 // $("button")[0].parentElement.innerHTML
 
+// @workouts = current_user.workouts
