--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,7 +16,7 @@
 
   <%= image_tag "armedit3.png", :class => "arm-image" %>
   <%= image_tag "rearlegedit.png", :class => "rear-leg-image" %>
-  <%= image_tag "legedit_copy.png", :class => "front-leg-image" %>
+  <%= image_tag "frontleg.png", :class => "front-leg-image" %>
 
 <!--  <%= image_tag "leftchest.png", :class => "leftchest"%>
  -->
