--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,7 +15,7 @@
  */
 
 body {
-  background-image: url("http://www.360fitness-studio.com/images/BackgroundSized.png") ;
+  background-image: url("http://www.resolutionwall.com/wp-content/uploads/2014/03/cool-dark-backgrounds-5.jpg") ;
   /*background-repeat: none;*/
   /*background-repeat: no-repeat;*/
   background-size: cover;
