--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <h1 id="logo"> WorkMeOut </h1>
-<!-- <link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'> -->
+<link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
 
 
 <% if logged_in? %>
