--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,10 +15,10 @@
  */
 
 body {
-  background-image: url("http://www.resolutionwall.com/wp-content/uploads/2014/03/cool-dark-backgrounds-5.jpg") ;
+  background-image: url("cage_background.jpg") ;
   /*background-repeat: none;*/
   /*background-repeat: no-repeat;*/
-  background-size: cover;
+  /*background-size: cover;*/
   /*margin: 0px;*/
 
 }
@@ -127,14 +127,15 @@ right: 10px;
 #info {
   height: 400px;
   width: 400px;
-  position: absolute;
+  /*position: absolute;*/
   background-color: black;
   opacity: .6;
-  top: 170px;
-  left: 40px;
+  /*top: 170px;*/
+  /*left: 40px;*/
   border: 10px dotted white;
   border-radius: 10px;
   padding: 10px;
+  float: left;
 
 }
 
@@ -142,14 +143,15 @@ right: 10px;
 #contactinfo {
   height: 400px;
   width: 400px;
-  position: absolute;
+  /*position: absolute;*/
   background-color: black;
   opacity: .6;
-  top: 170px;
-  right: 40px;
+  /*top: 170px;*/
+  /*right: 40px;*/
   border: 10px dotted white;
   border-radius: 10px;
   padding: 10px;
+  float: right;
 
 }
 
