--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
-
+<!--
 <div id="banner">
 
-</div>
+</div> -->
 
 <h1 id="logo"> WorkMeOut </h1>
 <link href='http://fonts.googleapis.com/css?family=Frijole' rel='stylesheet' type='text/css'>
@@ -20,15 +20,15 @@
 
 <!--  <%= image_tag "leftchest.png", :class => "leftchest"%>
  -->
-<div id="info">
+<!-- <div id="info">
   <h1 style="color: red; text-align: center; font-family: 'Frijole', cursive;"> What we provide </h1>
     <p style="color: red; text-align: center; font-family: 'Frijole'"> An innovative and efficient way for the user to learn about exercises </p>
     <h1 style="color: red; text-align: center; font-family: 'Frijole', cursive;"> How to use?</h1>
        <p style="color: red; text-align: center; font-family: 'Frijole'"> -Simply hover over the desired body part you wish to work out <br><br> -  Click on that body part<br><br> -Watch and Learn</p>
 </div>
+ -->
 
-
-<div id="contactinfo">
+<<!-- div id="contactinfo">
     <h1 style="color: red; text-align: center; font-family: 'Frijole', cursive;"> Contact </h1>
         <p style="color: red; text-align: center; font-family: 'Frijole'"> Email: Isaac.Saqib@stonybrook.edu </p>
         <p style="color: red; text-align: center; font-family: 'Frijole'">
@@ -39,7 +39,7 @@
           <a style="text-decoration: none; color: red; text-align: center; font-family: 'Frijole'" href="https://www.linkedin.com/pub/isaac-saqib/95/a84/905">LinkedIn
           </a>
         </p>
-</div>
+</div> -->
 
   <div id="videoContainer">
   </div>
@@ -165,8 +165,8 @@
 <% end %>
 
 </div>
-<footer id="footer">
+<!-- <footer id="footer">
 
 </footer>
-
+ -->
 
