--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -17,7 +17,7 @@
 body {
   background-image: url("cage_background.jpg") ;
   /*background-repeat: none;*/
-  /*background-repeat: no-repeat;*/
+  background-repeat: no-repeat;
   /*background-size: cover;*/
   /*margin: 0px;*/
 
