--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -17,10 +17,9 @@
 body {
   background-image: url("cage_background.jpg") ;
   /*background-repeat: none;*/
-  background-repeat: no-repeat;
+  /*background-repeat: no-repeat;*/
   /*background-size: cover;*/
-  /*margin: 0px;*/
-
+  /*background-position: center;*/
 }
 
 #logo {
