removing torso text

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -18,7 +18,7 @@ body {
   background-image: url("cage_background.jpg") ;
   /*background-repeat: none;*/
   /*background-repeat: no-repeat;*/
-  /*background-size: cover;*/
+  background-size: cover;
   /*background-position: center;*/
 }
 
