--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -112,7 +112,7 @@
   <div class="bodypart" id="Lower-Back">
   </div>
 
-<h1 class="rear" id="rear-torso-text"> Back </h1>
+<!-- <h1 class="rear" id="rear-torso-text"> Back </h1> -->
 <h1 class="rear" id="rear-leg-text"> Rear Leg </h1>
 
 
